--- a/app/src/main/assets/htn_about_app.html
+++ b/app/src/main/assets/htn_about_app.html
@@ -4,6 +4,55 @@
   -->
 
 <head>
+
+    <title>About HTN</title>
+
+    <style>
+
+        * {
+            margin: 0;
+            padding: 0;
+            font-size: 16px;
+            font-family: sans-serif;
+        }
+
+        body {
+            margin: 10px;
+        }
+
+        h1 {
+            margin-top: 15px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
+        a, u {
+            text-decoration: none;
+        }
+
+    </style>
 </head>
+
 <body>
+
+    <p id="app_name">Hold the Narwhal</p>
+    <p id="app_author">Created by: Damien Diehl</p>
+    <p id="app_version">Version</p>
+    <p id="app_updated">Updated</p>
+    <p>Questions or comments? Feel free to send an <a href="mailto:htn@damiendiehl.net">email</a>!</p>
+
+    <h1>Acknowledgements</h1>
+
+    <h1>Copyright Notice</h1>
+
+    <h1>Privacy Policy</h1>
+    <p>Updated June 30, 2015</p>
+    <p>Hold the Narwhal (HTN) is in no way, shape, or form associated with reddit, Inc. The privacy policy for reddit can be found at http://www.reddit.com/help/privacypolicy/ as of the time this was last updated.</p>
+    <p>HTN may collect anonymous usage statistics to better understand the usage patterns of its users, and to support future development. These statistics do not contain any personally identifiable information, and cannot be traced back to you or your online accounts in any way.</p>
+    <p>Advertisements are presented through MoPub. HTN and its development team are not responsible for any statistics collected by MoPub through ad views and clicks. The content presented in these advertisements does not reflect the views of reddit, HTN or its development team.</p>
+
 </body>
