--- a/app/src/main/assets/htn_about_app.html
+++ b/app/src/main/assets/htn_about_app.html
@@ -23,6 +23,7 @@
         h1 {
             margin-top: 15px;
             margin-bottom: 10px;
+            font-size: 18px;
         }
 
         p {
@@ -39,19 +40,34 @@
 
 <body>
 
-    <p id="app_name">Hold the Narwhal</p>
-    <p id="app_author">Created by: Damien Diehl</p>
     <p id="app_version">Version</p>
     <p id="app_updated">Updated</p>
     <p>Questions or comments? Feel free to send an <a href="mailto:htn@damiendiehl.net">email</a>!</p>
 
-    <h1>Acknowledgements</h1>
+    <h1>Attributions</h1>
+    <p>Hold the Narwhal application for Android, Copyright (c) 2015 Damien Diehl. All rights reserved.</p>
 
-    <h1>Copyright Notice</h1>
+    <!-- reddit -->
+
+    <p>Square's <a href="http://square.github.io/okhttp/" target="_blank">OkHttp</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+
+    <p>Square's <a href="http://square.github.io/retrofit/" target="_blank">Retrofit</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+
+    <p>Square's <a href="http://square.github.io/otto/" target="_blank">Otto</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+
+    <p>Square's <a href="http://square.github.io/picasso/" target="_blank">Picasso</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+
+    <p>Jake Wharton's <a href="http://jakewharton.github.io/butterknife/" target="_blank">Butter Knife</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+
+    <!-- ButterKnife -->
+    <!-- Flurry -->
+    <!-- MoPub -->
+
+    <p>Some icons in this app are used with permission from Icons8, a source for icons for desktop, web, and mobile applications. <a href="https://icons8.com/" target="_blank">https://icons8.com/</a></p>
 
     <h1>Privacy Policy</h1>
-    <p>Updated June 30, 2015</p>
-    <p>Hold the Narwhal (HTN) is in no way, shape, or form associated with reddit, Inc. The privacy policy for reddit can be found at http://www.reddit.com/help/privacypolicy/ as of the time this was last updated.</p>
+    <p>Updated July 21, 2015</p>
+    <p>Hold the Narwhal (HTN) is in no way, shape, or form associated with reddit, Inc. The privacy policy for reddit can be found at <a href="http://www.reddit.com/help/privacypolicy/">http://www.reddit.com/help/privacypolicy/</a> as of the time this document was last updated.</p>
     <p>HTN may collect anonymous usage statistics to better understand the usage patterns of its users, and to support future development. These statistics do not contain any personally identifiable information, and cannot be traced back to you or your online accounts in any way.</p>
     <p>Advertisements are presented through MoPub. HTN and its development team are not responsible for any statistics collected by MoPub through ad views and clicks. The content presented in these advertisements does not reflect the views of reddit, HTN or its development team.</p>
 
