--- a/app/src/main/assets/htn_about_app.html
+++ b/app/src/main/assets/htn_about_app.html
@@ -7,6 +7,8 @@
 
     <title>About HTN</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
 
         * {
@@ -46,8 +48,8 @@
             updated.innerHTML = "Updated: " + Android.getUpdated();
         }
 
-        window.onload = function() {
-            // fillAndroidData();
+        window.onload = function(e) {
+            fillAndroidData();
         };
     </script>
 </head>
@@ -66,44 +68,45 @@
     <!-- TODO: reddit license -->
 
     <p>Square's <a href="http://square.github.io/okhttp/" target="_blank">OkHttp</a> library,
-        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here:
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
-            http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">here</a>.</p>
 
     <p>Square's <a href="http://square.github.io/retrofit/" target="_blank">Retrofit</a> library,
-        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here:
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
-            http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">here</a>.</p>
 
     <p>Square's <a href="http://square.github.io/otto/" target="_blank">Otto</a> library, subject
-        to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here:
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
-            http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+        to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">here</a>.</p>
 
     <p>Square's <a href="http://square.github.io/picasso/" target="_blank">Picasso</a> library,
-        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here:
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
-            http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">here</a>.</p>
 
     <p>Jake Wharton's <a href="http://jakewharton.github.io/butterknife/" target="_blank">Butter
         Knife</a> library, subject to the Apache 2.0 license. You can obtain a copy of the Apache
         2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
-            http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
+            here</a>.</p>
 
     <p>Some icons in this app are used with permission from Icons8, a source for icons for desktop,
         web, and mobile applications. <a href="https://icons8.com/" target="_blank">
             https://icons8.com/</a></p>
 
+
     <h1>Privacy Policy</h1>
+
     <p>Updated July 21, 2015</p>
+
     <p>Hold the Narwhal (HTN) is in no way, shape, or form associated with reddit, Inc. The privacy
-        policy for reddit can be found at <a href="http://www.reddit.com/help/privacypolicy/">
-            http://www.reddit.com/help/privacypolicy/</a> as of the time this document was last
-        updated.</p>
+        policy for reddit can be found at
+        <a href="http://www.reddit.com/help/privacypolicy/" target="_blank">here</a> as of the time
+        this document was last updated.</p>
+
     <p>HTN may collect anonymous usage statistics to better understand the usage patterns of its
         users, and to support future development. These statistics do not contain any personally
         identifiable information, and cannot be traced back to you or your online accounts in any
         way.</p>
+
     <p>Advertisements are presented through MoPub. HTN and its development team are not responsible
         for any statistics collected by MoPub through ad views and clicks. The content presented in
         these advertisements does not reflect the views of reddit, HTN or its development team.</p>
