Updated About App with Bypass library

--- a/app/src/main/assets/htn_about_app.html
+++ b/app/src/main/assets/htn_about_app.html
@@ -88,6 +88,10 @@
         2.0 license here: <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
             here</a>.</p>
 
+    <p>Uncodin / <a href="https://github.com/Uncodin/bypass" target="_blank">Bypass</a>,
+        subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license here:
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">here</a>.</p>
+
     <p>Some icons in this app are used with permission from Icons8, a source for icons for desktop,
         web, and mobile applications. <a href="https://icons8.com/" target="_blank">
             https://icons8.com/</a></p>
