Added reddit license notice

--- a/app/src/main/assets/htn_about_app.html
+++ b/app/src/main/assets/htn_about_app.html
@@ -61,7 +61,8 @@
   <p>Hold the Narwhal application for Android, Copyright (c) 2015 Damien Diehl.
     All rights reserved.</p>
 
-  <!-- TODO: reddit license -->
+  <p>Trademarks of reddit, including the reddit name, logo, and snoo, are used with express permission
+  from reddit, Inc.</p>
 
   <p>Square's <a href="http://square.github.io/okhttp/" target="_blank">OkHttp</a> library,
     subject to the Apache 2.0 license. You can obtain a copy of the Apache 2.0 license
